# zephyr

boards/arm/nrf52840_dongle_mrf24j40/: Kconfig  Kconfig.board  Kconfig.defconfig  board.c  board.cmake  nrf52840_dongle_mrf24j40-pinctrl.dtsi  nrf52840_dongle_mrf24j40.dts  nrf52840_dongle_mrf24j40.yaml  nrf52840_dongle_mrf24j40_defconfig
boards/arm/stm32f746g_disco/: Kconfig.defconfig  stm32f746g_disco.dts
boards/arm/ts_aqu_ccu/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  board.cmake  ts_aqu_ccu.dts  ts_aqu_ccu.yaml  ts_aqu_ccu_defconfig
boards/nordic/nrf52840dongle/: Kconfig  board.cmake  nrf52840dongle_nrf52840.dts
boards/others/stm32_min_dev/: stm32_min_dev.dts  stm32_min_dev_stm32f103xb_blue.overlay
drivers/disk/: CMakeLists.txt  Kconfig.sdmmc  emmc_stm32.c
drivers/flash/: flash_stm32h7x.c
drivers/ieee802154/: CMakeLists.txt  Kconfig  Kconfig.mrf24j40  ieee802154_mrf24j40.c  ieee802154_mrf24j40_regs.h
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/aht/: CMakeLists.txt  Kconfig  aht.c
drivers/sensor/mmc5983ma/: CMakeLists.txt  Kconfig  mmc5983ma.c  mmc5983ma.h  mmc5983ma_trigger.c
dts/bindings/ieee802154/: microchip,mrf24j40.yaml
dts/bindings/mmc/: st,stm32-emmc.yaml
include/zephyr/: smf.h
lib/smf/: smf.c
samples/mrf24j40_demo/: CMakeLists.txt  prj.conf
samples/subsys/display/lvgl/: CMakeLists.txt  prj.conf
samples/subsys/display/lvgl/boards/: native_posix.conf  native_posix_64.conf  native_posix_64.overlay  stm32f746g_disco.conf
samples/subsys/display/lvgl/src/: main.c
samples/usb_hid_mouse/: prj.conf
(+15 files in other folders)
